# bitpart-rs

./: .gitignore  Cargo.toml  make-data.sh
example/: Cargo.toml
generators/: Cargo.toml
nearest-neighbours/: Cargo.toml
